syntax = "proto3";

option go_package = "./;proto";
option java_package = "com.github.go2o.rpc";


// 广告位编号
message AdPositionId {
  int64 PositionId = 1;
}

message AdGroupResponse{
  repeated string Value = 1;
}

message SAdPosition{
  /** 编号 */
  int64 id = 1;
  /** 广告位编码 */
  string key = 2;
  /** 分组名称 */
  string groupName = 3;
  /** 广告位名称 */
  string name = 4;
  /** 投放的广告编号 */
  int64 putAid = 5;
  /** Opened */
  int32 opened = 6;
  /** Enabled */
  int32 enabled = 7;
  /** 标志 */
  int32 flag = 8;
}

// 查询广告请求
message QueryAdRequest{
  string keyword = 1;
  int32 size = 2;
}

// 查询广告响应
message QueryAdResponse{
  repeated SAd value = 1;
}

// 广告用户设置
message SAdUserSet {
  // 编号
  int64 id = 1;
  // 广告位编号
  int64 posId = 2;
  //广告用户编号
  int64 adUserId = 3;
  // 广告编号
  int64 adId = 4;
}


// 图片广告数据
message SAdData {
  // 图片编号
  int64 id = 1;
  // 图片标题
  string title = 2;
  // 链接
  string linkUrl = 3;
  // 图片地址
  string imageUrl = 4;
  // 是否启用
  int32 enabled = 5;
  // 排列序号
  int32 sortNum = 6;
}

message SetDefaultAdRequest {
  int64 positionId = 2;
  int64 adId = 3;
}
message SetUserAdRequest {
  int64 adUserId = 1;
  int64 posId = 2;
  int64 adId = 3;
}
message AdIdRequest {
  // 广告用户编号
  int64 adUserId = 1;
  // 广告编号
  int64 adId = 2;
  // 广告位KEY
  string adKey = 3;
  // 是否返回数据
  bool returnData = 4;
}

// 广告
message SAd {
  /** 广告用户 */
  int64 userId = 1;
  /** 广告ID */
  int64 adId = 2;
  /** 广告名称 */
  string name = 3;
  /** 广告类型 */
  int32 adType = 4;
  /** 广告状态 */
  int32 status = 5;
  /** 广告数据 */
  repeated SAdData data = 6;
}
message SaveSwiperImageRequest {
  int64 adUserId = 1;
  int64 adId = 2;
  SAdData value = 3;
}

message ImageIdRequest {
  int64 adUserId = 1;
  int64 adId = 2;
  int64 imageId = 3;
}

// 查询广告数据
message QueryAdvertisementDataRequest{
  // 广告用户编号
  int64 adUserId = 1;
  //　广告位键
  repeated string keys = 2;
}


// 广告数据包装传输对象
message SAdvertisementPackage{
  // 广告编号
  int64 id = 1;
  // 广告类型
  int32 type = 2;
  // 广告媒体数据
  repeated SAdvertisementMedia media = 3;
}

/** 广告媒体 */
message SAdvertisementMedia{
  /** 标题 */
  string title = 1;
  /** 点击执行命令 */
  string cmd = 2;
  /** 链接地址 */
  string linkUrl = 3; 
  // 媒体资源地址，如图片视频
  string mediaUrl = 4;
}

// 查询广告数据
message QueryAdvertisementDataResponse{
  // 广告用户编号
  int64 userId = 1;
  //　广告位键
  map<string,SAdvertisementPackage> value = 2;
}

